--- a/call-e/src/index.css
+++ b/call-e/src/index.css
@@ -13,27 +13,18 @@
 }
 
 @layer components {
-  .login-box {
-    @apply w-[100vw] h-[100vh];
-    background: url("/assets/callebg.png") #2f3142;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: contain;
-    display: grid;
-    place-items: center;
-  }
-
   .login-form-box {
-    @apply border border-calle-bg-dark rounded py-8 px-4 backdrop-blur w-5/12;
+    @apply rounded-2xl py-8 px-4 backdrop-blur w-5/12 shadow-md;
     background: rgba(47, 49, 66, 0.7);
   }
 
   .input-bg {
     background-color: rgba(255, 255, 255, 0.5);
+    @apply outline-calle-btn-bg text-calle-black;
   }
 
   .topNav {
-    @apply absolute flex  w-full px-16  py-4 items-center justify-between shadow-sm top-0 left-0 z-10;
+    @apply absolute flex  w-full px-16  py-4 items-center justify-between shadow-md top-0 left-0 z-10;
     backdrop-filter: blur(0.1rem);
   }
 
@@ -42,22 +33,22 @@
     @apply before:absolute before:w-2 before:h-2 before:bg-green-600 before:rounded-full before:right-0 before:-top-1;
   }
 
-  .homeContainer {
+  .Container {
     width: 100vw;
     height: 100vh;
     position: relative;
   }
 
-  .homebg {
+  .mainbg {
     position: absolute;
     inset: 0;
-    background: url("/assets/altbg1.png");
+    background: url("/assets/mainbg.png");
     background-repeat: repeat;
     background-size: contain;
     mix-blend-mode: multiply;
   }
 
-  .homeBodyBox {
+  .centerBox {
     position: absolute;
     inset: 0;
     display: grid;
@@ -83,5 +74,13 @@
   .controlBtn {
     @apply outline-none shadow-xl rounded-xl p-5 cursor-pointer bg-transparent text-2xl text-center backdrop-blur-[1px] border border-white text-white;
     @apply hover:scale-[1.02] transition-transform;
+  }
+
+  .meetingGridBoxMain {
+    @apply w-full min-h-full grid grid-flow-dense auto-rows-auto gap-2 place-content-center px-4;
+  }
+
+  .videoScreen {
+    @apply rounded-lg bg-calle-bg-dark;
   }
 }
